<resources>

    <string name="app_name">Location Alarm</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_main_activity">My Alarms</string>
    <string name="desc_hint">Description</string>
    <string name="title_hint">Title</string>
    <string name="location_label">Location</string>
    <string name="radius_label">Radius</string>
    <string name="km_label">Km</string>
    <string name="alarm_for">Alarm For:</string>
    <color name="tap_color">#DBDBDB</color>
    <string name="sign_in">Sign in</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="createaccount">Create Account</string>
    <string name="lufb">Login using Facebook</string>
    <string name="email">email@example.com</string>
    <string name="confirmpassword">confirm password</string>
    <string name="create">Create</string>
    <string name="APP_ID">209567229179373</string>
    <string name="createalarm">Create Alarm</string>
    <string name="details">Details</string>
    <string name="settings">Settings</string>
    <string name="tone">Tone</string>
    <string name="stopLowBattery">Stop on Low Battery</string>
    <string name="snooze">Snooze Time</string>
    <string name="acsettings">Account Settings</string>
    <string name="edit_friend">Edit Friend</string>
    <string name="edit_alarm">Edit Alarm</string>
    <string name="friends">My Friends</string>
    <string name="add_friend">Add Friend</string>
    <string name="name_hint">Nick</string>
    <string name="alarms">Alarms</string>
    <string name="friend_title">Friend Details</string>
    <string name="sync_interval">Sync Interval</string>

</resources>